--- a/13-manage-array-state/src/components/manage-array-state/style.css
+++ b/13-manage-array-state/src/components/manage-array-state/style.css
@@ -1,4 +1,27 @@
-.manage-array-state {
+@reference 'tailwindcss';
+
+@layer components {
+  .manage-array-state {
+    @apply max-w-[400px] m-[4rem] mx-auto;
+
+    output {
+      @apply block border-4 border-solid py-2 px-3 rounded;
+    }
+
+    [role='group'] {
+      @apply flex flex-col flex-wrap items-start gap-[6px] my-8 mx-0;
+      &[data-layout-row] {
+        @apply flex-row;
+      }
+
+      input {
+        @apply w-[100px];
+      }
+    }
+  }
+}
+
+/* .manage-array-state {
   max-width: 400px;
   margin: 4rem auto;
 
@@ -25,4 +48,4 @@
       width: 100px;
     }
   }
-}
+} */
