practice: 틱택토 마크업 및 스타일링

--- a/24-tic-tac-toe/src/styles/main.css
+++ b/24-tic-tac-toe/src/styles/main.css
@@ -9,3 +9,4 @@
 @import './common/_animation.css' layer(utilities);
 @import './components/_button.css' layer(components);
 @import './components/_input.css' layer(components);
+@import './components/tailwind.css' layer(components);
